<resources>
    <string name="app_name">Sign Language Translator</string>
    <string name="action_settings">Settings</string>
    <string name="btn_discover">Discover</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_send">Send Data</string>
    <string name="btn_classify">Classify</string>
    <string name="txt_classify">Letter Classify</string>
    <string name="text_data">Write Something to Send</string>
    <string name="speech_prompt">Say Something</string>
    <string name="speech_not_supported">Device does not support speech input</string>
</resources>
